syntax = "proto3";

package ServerProto;

enum SERVER_TYPE
{
    NONE = 0;
    CENTER = 1;
    GATE = 2;
    LOGIC = 3;
    DATABASE = 4;
    MATCH = 5;
}

message ServerInfo
{
    string ip = 1;
    int32 port = 2;
    int32 server_free_level = 3;
    int32 server_type = 4;

    enum Operation
    {
        Register = 0;
        RequstAssgin = 1;
        Connect = 2;
    }

    Operation opt = 5;
}

message ServerConnChange
{
    string ip = 1;
    int32 port = 2;
    int32 change = 3;
    SERVER_TYPE type = 4;
}

message UserInfo
{
    int32 userid = 1;
    int32 fd = 2;

    enum Operation
    {
        Register = 0;
        Logout = 1;
    }

    Operation opt = 3;
}

enum SERVER_FREE_LEVEL
{
    FREE = 0;
    COMMON = 1;
    BUSY = 2;
    DOWN = 3; //宕机
}

message RegionInfo
{
    int32 id = 1;
    int32 people_count = 2;
    SERVER_FREE_LEVEL level = 3;
}

message GetRegionInfoRequest
{
}

message GetRegionInfoResponse
{
    repeated RegionInfo infos = 1;
}

message JoinRegionRequest
{
    int32 id = 1;
}

message JoinRegionResponse
{
    bool ret = 1;
    string ip = 2;
    int32 port = 3;
}